--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h1 {
 }
 
 h2 {
-  font-family: Comic;
+  font-family: "Comic Sans MS";
   font-size: 25px;
   margin: 0;
   border: 1px solid lightgrey;
